--- a/src/views/history/style.css
+++ b/src/views/history/style.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding-top: 53px;
 }
 
 #noQueries {
